add api gateway gRPC clients
